crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__order__test__push_many_3.snap
---
source: crates/oxvg_actions/src/actions/structure/order.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><one/><two/><three/><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>one,two,three</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Push"/></oxvg:history><oxvg:selection oxvg:ids="2 3 4"/></oxvg:state></svg>
